# niramaya-backend

./: .gitignore  main.py  pyproject.toml
api/v1/endpoints/: appointment.py  auth.py  doctor.py  file_upload.py  patient.py  profile.py
core/: cloudinary.py  config.py  mail.py  middleware.py  security.py  stripe_client.py
database/: postgres.py
dependencies/: auth.py
schemas/: auth_schema.py  doctor_availability.py  doctor_schema.py  enum.py  profile_schema.py  schemas.py
services/: appointment_service.py  file_upload_service.py
