[project]
name = "niramaya-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi==0.128.0",
    "loguru==0.7.3",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.46",
    "uvicorn==0.40.0",
]
