[project]
name = "niramaya-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "bcrypt==3.2.2",
    "cloudinary==1.44.1",
    "fastapi==0.128.0",
    "loguru==0.7.3",
    "passlib[bcrypt]==1.7.4",
    "pikepdf==10.2.0",
    "pillow==12.1.0",
    "psycopg2-binary==2.9.11",
    "pydantic[email]==2.12.5",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy==2.0.46",
    "uvicorn==0.40.0",
]
